--- a/wz-jd-tbschedule/pom.xml
+++ b/wz-jd-tbschedule/pom.xml
@@ -31,6 +31,38 @@
             <artifactId>tbschedule</artifactId>
             <version>3.3.3.2</version>
         </dependency>
+
+        <!-- quartz start -->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz-jobs</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <!-- quartz end -->
+        <!-- https://mvnrepository.com/artifact/org.apache.archiva.redback.components/spring-quartz -->
+        <!--<dependency>
+            <groupId>org.apache.archiva.redback.components</groupId>
+            <artifactId>spring-quartz</artifactId>
+            <version>2.1</version>
+        </dependency>-->
+
+        <!-- jmx start -->
+        <dependency>
+            <groupId>com.sun.jdmk</groupId>
+            <artifactId>jmxtools</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-modeler</groupId>
+            <artifactId>commons-modeler</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <!-- jmx end -->
     </dependencies>
     <build>
         <finalName>wz-jd-tbschedule</finalName>
