--- a/wz-java/pom.xml
+++ b/wz-java/pom.xml
@@ -26,6 +26,11 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.jd.mcc</groupId>
+      <artifactId>jd-mcc-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
