--- a/wz-consumer/pom.xml
+++ b/wz-consumer/pom.xml
@@ -148,6 +148,13 @@
             <artifactId>commons-io</artifactId>
             <version>${commons-io.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
         <!-- commons end -->
         <!-- logback -->
         <dependency>
