--- a/wz-java-test/pom.xml
+++ b/wz-java-test/pom.xml
@@ -223,8 +223,16 @@
             <artifactId>commons-pool2</artifactId>
             <version>2.4.2</version>
         </dependency>-->
-
-
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>1.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>wz-test</finalName>
