--- a/wz-java/pom.xml
+++ b/wz-java/pom.xml
@@ -27,6 +27,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.jd.mcc</groupId>
       <artifactId>jd-mcc-api</artifactId>
       <version>1.0-SNAPSHOT</version>
